--- a/curso-k8s/Chart.yaml
+++ b/curso-k8s/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: curso-k8s
-description: A Helm chart for Kubernetes
+description: Uma app do curso do k8s
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -14,8 +14,8 @@ type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
-version: 0.1.0
+version: 1.0.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application.
-appVersion: 1.16.0
+appVersion: 3.0.0
