--- a/curso-k8s/values.yaml
+++ b/curso-k8s/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: nginx:1.19.2
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
@@ -49,17 +49,34 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-resources: {}
+resources: 
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+  limits:
+     cpu: 500m
+     memory: 512Mi
+  requests:
+     cpu: 100m
+     memory: 128Mi
+
+livenessProbe:
+  path: /
+  initialDelaySeconds: 60
+  periodSeconds: 10
+  timeoutSeconds: 5
+  successThreshold: 1
+  failureThreshold: 5
+ 
+readinessProbe:
+  path: /
+  initialDelaySeconds: 45
+  periodSeconds: 5
+  timeoutSeconds: 5
+  successThreshold: 1
+  failureThreshold: 3
+
 
 nodeSelector: {}
 
